--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,33 @@ board = T-Deck
 framework = arduino
 upload_speed = 921600
 monitor_speed = 115200
-build_flags = 
+lib_deps =
+  SPI
+  Wire
+  jgromes/RadioLib @ ^7.1.2
+  rweather/Crypto @ ^0.4.0
+  adafruit/RTClib @ ^2.1.3
+  melopero/Melopero RV3028 @ ^1.1.0
+build_flags = -w -DNDEBUG -DRADIOLIB_STATIC_ONLY=1 -DRADIOLIB_GODMODE=1
+    -D LORA_FREQ=867.5
+    -D LORA_BW=250
+    -D LORA_SF=10
+    -D LILYGO_TLORA
+    -D LILYGO_TDECK
+    -D P_LORA_DIO_0=26    ; SX1276 DIO0 interrupt pin
+    -D P_LORA_DIO_1=33    ; SX1276 DIO1 interrupt pin
+    -D P_LORA_NSS=18      ; Chip select - SS pin
+    -D P_LORA_RESET=14    ; Reset pin
+    -D P_LORA_SCLK=5      ; SPI clock
+    -D P_LORA_MISO=19     ; SPI MISO
+    -D P_LORA_MOSI=27     ; SPI MOSI
+    -D P_LORA_TX_LED=2    ; LED pin for TX indication
+    -D PIN_VBAT_READ=35   ; Battery voltage reading (analog pin)
+    -D PIN_USER_BTN=0
+    -D RADIO_CLASS=CustomSX1276
+    -D ARDUINO_LOOP_STACK_SIZE=16384
+    -D WRAPPER_CLASS=CustomSX1276Wrapper
+    -D LORA_TX_POWER=20
     -DBOARD_HAS_PSRAM=1
     -DCORE_DEBUG_LEVEL=1
     -DARDUINO_USB_CDC_ON_BOOT=1
