Fixing pin definitions

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,7 +25,7 @@ lib_deps =
   adafruit/RTClib @ ^2.1.3
   melopero/Melopero RV3028 @ ^1.1.0
 build_flags = -w -DNDEBUG -DRADIOLIB_STATIC_ONLY=1 -DRADIOLIB_GODMODE=1 -DLILYGO_TDECK=1
-    -D LORA_FREQ=867.5
+    -D LORA_FREQ=915.0
     -D LORA_BW=250
     -D LORA_SF=10
     -D LILYGO_TLORA
@@ -34,11 +34,11 @@ build_flags = -w -DNDEBUG -DRADIOLIB_STATIC_ONLY=1 -DRADIOLIB_GODMODE=1 -DLILYGO
     -D P_LORA_DIO_1=33    ; SX1276 DIO1 interrupt pin
     -D P_LORA_NSS=18      ; Chip select - SS pin
     -D P_LORA_RESET=14    ; Reset pin
-    -D P_LORA_SCLK=5      ; SPI clock
-    -D P_LORA_MISO=19     ; SPI MISO
-    -D P_LORA_MOSI=27     ; SPI MOSI
+    -D P_LORA_SCLK=40      ; SPI clock
+    -D P_LORA_MISO=38     ; SPI MISO
+    -D P_LORA_MOSI=41     ; SPI MOSI
     -D P_LORA_TX_LED=2    ; LED pin for TX indication
-    -D PIN_VBAT_READ=35   ; Battery voltage reading (analog pin)
+    -D PIN_VBAT_READ=4   ; Battery voltage reading (analog pin)
     -D PIN_USER_BTN=0
     -D RADIO_CLASS=CustomSX1276
     -D ARDUINO_LOOP_STACK_SIZE=16384
@@ -59,8 +59,8 @@ board_build.arduino.memory_type = qio_opi
 board_build.flash_mode = qio
 
 ; Libraries path for both local libs and TDeck example libs
-lib_dirs = 
-    ${PROJECT_DIR}/lib
+; lib_dirs = 
+;     ${PROJECT_DIR}/lib
 
 ; File System configuration for uploading data
 board_build.filesystem = littlefs
