--- a/platformio.ini
+++ b/platformio.ini
@@ -30,19 +30,20 @@ build_flags = -w -DNDEBUG -DRADIOLIB_STATIC_ONLY=1 -DRADIOLIB_GODMODE=1 -DLILYGO
     -D LORA_SF=10
     -D LILYGO_TLORA
     -D LILYGO_TDECK
-    -D P_LORA_DIO_0=26    ; SX1276 DIO0 interrupt pin
-    -D P_LORA_DIO_1=33    ; SX1276 DIO1 interrupt pin
-    -D P_LORA_NSS=18      ; Chip select - SS pin
-    -D P_LORA_RESET=14    ; Reset pin
+    -D RADIOLIB_DEBUG_BASIC=1
+    -D P_LORA_DIO_0=45   
+    -D P_LORA_DIO_1=13  
+    -D P_LORA_NSS=9      ; Chip select - SS pin
+    -D P_LORA_RESET=17    ; Reset pin
     -D P_LORA_SCLK=40      ; SPI clock
     -D P_LORA_MISO=38     ; SPI MISO
     -D P_LORA_MOSI=41     ; SPI MOSI
-    -D P_LORA_TX_LED=2    ; LED pin for TX indication
+    -D P_LORA_TX_LED=-1    ; LED pin for TX indication
     -D PIN_VBAT_READ=4   ; Battery voltage reading (analog pin)
     -D PIN_USER_BTN=0
-    -D RADIO_CLASS=CustomSX1276
+    -D RADIO_CLASS=CustomSX1262
     -D ARDUINO_LOOP_STACK_SIZE=16384
-    -D WRAPPER_CLASS=CustomSX1276Wrapper
+    -D WRAPPER_CLASS=CustomSX1262Wrapper
     -D LORA_TX_POWER=20
     -DBOARD_HAS_PSRAM=1
     -DCORE_DEBUG_LEVEL=1
