Convert to SPIFFS

--- a/platformio.ini
+++ b/platformio.ini
@@ -64,7 +64,7 @@ board_build.flash_mode = qio
 ;     ${PROJECT_DIR}/lib
 
 ; File System configuration for uploading data
-board_build.filesystem = littlefs
+board_build.filesystem = spiffs
 board_build.filesystem_size = 0x9F0000
 extra_scripts = post:upload_data.py
 
